@@ -2796,5 +2796,7 @@
 	  keyboard data in multi-user mode.
 	* graphics/nxconsole/nxcon_kdbind.c:  Fixed unmatched sem_wait and sem_post.
 	  Fix some conditional compilation that included a few too many lines of code.
+	* drivers/input/stmpe11_tsc.c and stmpe11.h:  Add a timeout to catch missed
+	  pen up events.  Now the STM3240G-EVAL touchscreen works very smoothly.
 
 
